# Neural_Network

./: CMakeLists.txt
src/: main.cpp
src/headers/: matrices.h  tensor.h
src/helpers/: tensor.cpp
